Cluster en Docker funcional, adicionando inicializacion de las imagenes de cada nodo y scripts automaticos del proceso

--- a/config/replica/postgresql.conf
+++ b/config/replica/postgresql.conf
@@ -202,7 +202,7 @@ dynamic_shared_memory_type = posix	# the default is usually the first option
 
 # - Settings -
 
-wal_level = replica			# minimal, replica, or logical
+#wal_level = replica			# minimal, replica, or logical
 					# (change requires restart)
 #fsync = on				# flush data to disk for crash safety
 					# (turning this off can cause
@@ -217,7 +217,7 @@ wal_level = replica			# minimal, replica, or logical
 					#   fsync_writethrough
 					#   open_sync
 #full_page_writes = on			# recover from partial page writes
-wal_log_hints = on			# also do full page writes of non-critical updates
+#wal_log_hints = off			# also do full page writes of non-critical updates
 					# (change requires restart)
 #wal_compression = off			# enables compression of full-page writes;
 					# off, pglz, lz4, zstd, or on
@@ -291,7 +291,7 @@ min_wal_size = 80MB
 				# just after the specified recovery target (on)
 				# just before the recovery target (off)
 				# (change requires restart)
-recovery_target_timeline = 'latest'	# 'current', 'latest', or timeline ID
+#recovery_target_timeline = 'latest'	# 'current', 'latest', or timeline ID
 				# (change requires restart)
 #recovery_target_action = 'pause'	# 'pause', 'promote', 'shutdown'
 				# (change requires restart)
@@ -305,7 +305,7 @@ recovery_target_timeline = 'latest'	# 'current', 'latest', or timeline ID
 
 # Set these on the primary and on any standby that will send replication data.
 
-max_wal_senders = 8		# max number of walsender processes
+#max_wal_senders = 10		# max number of walsender processes
 				# (change requires restart)
 #max_replication_slots = 10	# max number of replication slots
 				# (change requires restart)
@@ -329,7 +329,7 @@ max_wal_senders = 8		# max number of walsender processes
 
 # These settings are ignored on a primary server.
 
-primary_conninfo = 'host=master port=5432 user=replicator password=replicatorpassword'			# connection string to sending server
+#primary_conninfo = 'host=master port=5432 user=replicator password=replicatorpassword'			# connection string to sending server
 #primary_slot_name = ''			# replication slot on sending server
 #promote_trigger_file = ''		# file name whose presence ends recovery
 hot_standby = on			# "off" disallows queries during recovery
