--- a/config/master/pg_hba.conf
+++ b/config/master/pg_hba.conf
@@ -96,7 +96,7 @@ host    all             all             ::1/128                 trust
 local   replication     all                                     trust
 host    replication     all             127.0.0.1/32            trust
 host    replication     all             ::1/128                 trust
-host	replication	replicator	0.0.0.0/0		md5
+host	replication	replicator	172.18.0.0/24		trust
 
 # warning trust is enabled for all connections
 # see https://www.postgresql.org/docs/12/auth-trust.html
