--- a/config/master/postgresql.conf
+++ b/config/master/postgresql.conf
@@ -249,12 +249,12 @@ min_wal_size = 80MB
 
 # - Archiving -
 
-#archive_mode = off		# enables archiving; off, on, or always
+archive_mode = on		# enables archiving; off, on, or always
 				# (change requires restart)
 #archive_library = ''		# library to use to archive a logfile segment
 				# (empty string indicates archive_command should
 				# be used)
-#archive_command = ''		# command to use to archive a logfile segment
+archive_command = '/bin/true'		# command to use to archive a logfile segment
 				# placeholders: %p = path of file to archive
 				#               %f = file name only
 				# e.g. 'test ! -f /mnt/server/archivedir/%f && cp %p /mnt/server/archivedir/%f'
@@ -309,7 +309,7 @@ max_wal_senders = 10		# max number of walsender processes
 				# (change requires restart)
 max_replication_slots = 10	# max number of replication slots
 				# (change requires restart)
-#wal_keep_size = 0		# in megabytes; 0 disables
+wal_keep_size = 64MB		# in megabytes; 0 disables
 #max_slot_wal_keep_size = -1	# in megabytes; -1 disables
 #wal_sender_timeout = 60s	# in milliseconds; 0 disables
 #track_commit_timestamp = off	# collect timestamp of transaction commit
