Adicion configuracion pg_autofailover, modificacion pg_hba de Master y Replica e inclusion de postgresql-auto-failover en los Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
       - "5434:5432"
     volumes:
       - pgdata_monitor:/var/lib/postgresql/data
-    command: pg_autoctl create monitor --pgdata /var/lib/postgresql/data --auth trust
+    command: pg_autoctl create monitor --pgdata /var/lib/postgresql/data --auth trust --no-ssl
 
 volumes:
   pgdata_master:
