--- a/replica/Dockerfile
+++ b/replica/Dockerfile
@@ -1,5 +1,10 @@
 FROM postgres:15
 
+# Instala pg_autoctl y otras dependencias necesarias
+RUN apt-get update && \
+    apt-get install -y postgresql-auto-failover-cli && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Copiar el script de replicación
 COPY ./scripts/replica-entrypoint.sh /docker-entrypoint-initdb.d/replica-entrypoint.sh
 
