--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -1,5 +1,10 @@
 FROM postgres:15
 
+# Instala pg_autoctl y otras dependencias necesarias
+RUN apt-get update && \
+    apt-get install -y postgresql-auto-failover-cli && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Copiar el script para crear el rol replicator
 COPY ./scripts/init-replicator-role.sh /docker-entrypoint-initdb.d/init-replicator-role.sh
 
