--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,55 @@
 version: '3.9'
 
 services:
+
+  monitor:
+    #image: citusdata/pg_auto_failover  # Imagen oficial para el monitor
+    build:
+      context: ./pg_monitor
+      dockerfile: Dockerfile
+    container_name: pg_auto_failover-monitor
+      # user: postgres
+    environment:
+      POSTGRES_USER: cluster
+      POSTGRES_PASSWORD: Admin123
+      POSTGRES_DB: pg_auto_failover
+    volumes:
+      - pgdata_monitor:/var/lib/postgresql/data
+      - ./config/monitor/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./config/monitor/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./pg_monitor/scripts/init.sh:/docker-entrypoint-initdb.d/init.sh
+    networks:
+      pg_network:
+        ipv4_address: 172.18.0.4
+    ports:
+      - "5434:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U cluster -d test_cluster"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    entrypoint: ["/docker-entrypoint-initdb.d/init.sh"]
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf -c hba_file=/etc/postgresql/pg_hba.conf
+
   master:
     build:
       context: ./master
       dockerfile: Dockerfile  # Se asume que el Dockerfile para el master está en ./master/Dockerfile
     container_name: postgres-cluster-master
+    user: postgres
     environment:
       POSTGRES_USER: cluster
       POSTGRES_PASSWORD: Admin123
       POSTGRES_DB: test_cluster
+      PG_DATA: /var/lib/postgresql/data/node1
     volumes:
       - pgdata_master:/var/lib/postgresql/data
-      - ./config/master/postgresql.conf:/etc/postgresql/postgresql.conf
+        #- ./config/master/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./config/master/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./master/scripts/init-replicator-role.sh:/docker-entrypoint-initdb.d/init-replicator-role.sh
+        #- ./master/scripts/init-replicator-role.sh:/docker-entrypoint-initdb.d/init-replicator-role.sh
     networks:
       pg_network:
         ipv4_address: 172.18.0.2
-    depends_on:
-      - monitor
     ports:
       - "5432:5432"
     healthcheck:
@@ -27,29 +57,28 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-    command: >
-      sh -c "
-      pg_autoctl create postgres --hostname postgres-cluster-master --pgdata /var/lib/postgresql/data --auth trust --ssl-self-signed --monitor postgres://cluster:Admin123@pg_auto_failover-monitor:5432/pg_auto_failover --run &&
-      postgres -c config_file=/etc/postgresql/postgresql.conf -c hba_file=/etc/postgresql/pg_hba.conf
-      "
+        #entrypoint: ["/docker-entrypoint-initdb.d/init-replicator-role.sh"]
+    command: ["pg_autoctl", "create", "postgres", "--pgdata", "/var/lib/postgresql/data/node1", "--monitor", "postgres://autoctl_node@172.18.0.4:5432/pg_auto_failover", "--name", "master", "--auth", "trust", "--ssl-self-signed", "--run", "--candidate-priority", "1"]
 
   replica:
     build:
       context: ./replica
       dockerfile: Dockerfile  # Se asume que el Dockerfile para la réplica está en ./replica/Dockerfile
     container_name: postgres-cluster-replica
+    user: postgres
     environment:
       POSTGRES_USER: cluster
       POSTGRES_PASSWORD: Admin123
       POSTGRES_DB: test_cluster
+      PG_DATA: /var/lib/postgresql/node2
       POSTGRES_REPLICATION_ROLE: "replica"
       POSTGRES_REPLICATION_USER: "replicator"
       POSTGRES_REPLICATION_PASSWORD: "replicatorpassword"
     volumes:
       - pgdata_replica:/var/lib/postgresql/data
-      - ./config/replica/postgresql.conf:/etc/postgresql/postgresql.conf
+        #- ./config/replica/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./config/replica/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./replica/scripts/replica-entrypoint.sh:/docker-entrypoint-initdb.d/replica-entrypoint.sh
+        #- ./replica/scripts/replica-entrypoint.sh:/docker-entrypoint-initdb.d/replica-entrypoint.sh
     networks:
       pg_network:
         ipv4_address: 172.18.0.3
@@ -63,40 +92,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-    entrypoint: ["/docker-entrypoint-initdb.d/replica-entrypoint.sh"]
-    command: >
-      sh -c "
-      pg_autoctl create postgres --hostname postgres-cluster-replica --pgdata /var/lib/postgresql/data --auth trust --ssl-self-signed --monitor postgres://cluster:Admin123@pg_auto_failover-monitor:5432/pg_auto_failover --run && 
-      postgres -c config_file=/etc/postgresql/postgresql.conf -c hba_file=/etc/postgresql/pg_hba.conf
-      "
-
-  monitor:
-    #image: citusdata/pg_auto_failover  # Imagen oficial para el monitor
-    build:
-      context: ./pg_monitor
-      dockerfile: Dockerfile
-    container_name: pg_auto_failover-monitor
-    environment:
-      POSTGRES_USER: cluster
-      POSTGRES_PASSWORD: Admin123
-        #PG_AUTOCTL_PGDATA: /var/lib/postgresql/data
-        #PG_AUTOCTL_USE_TMUX: false
-        #NODE_NAME: monitor
-        #PG_AUTO_FAILOVER_MONITOR_PORT: 5432
-        #PG_AUTO_FAILOVER_REPLICA_CONNECTION_STRING: "host=postgres-cluster-replica user=cluster dbname=test_cluster"
-        #PG_AUTO_FAILOVER_MASTER_CONNECTION_STRING: "host=postgres-cluster-master user=cluster dbname=test_cluster"
-    networks:
-      pg_network:
-        ipv4_address: 172.18.0.4
-    ports:
-      - "5434:5432"
-    volumes:
-      - pgdata_monitor:/var/lib/postgresql/data
-      - ./pg_monitor/scripts/permissions-monitor.sh:/docker-entrypoint-initdb.d/permissions-monitor.sh
-      - ./config/monitor/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./config/monitor/postgresql.conf:/etc/postgresql/postgresql.conf
-    command: >
-     sh -c "postgres -c hba_file=/etc/postgresql/pg_hba.conf -c config_file=/etc/postgresql/postgresql.conf" 
+        #entrypoint: ["/docker-entrypoint-initdb.d/replica-entrypoint.sh"]
+    command: ["pg_autoctl", "create", "postgres", "--pgdata", "/var/lib/postgresql/data/node2", "--monitor", "postgres://autoctl_node@172.18.0.4:5432/pg_auto_failover", "--name", "replica", "--auth", "trust", "--ssl-self-signed", "--run"]
 
 volumes:
   pgdata_master:
