--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -7,10 +7,10 @@ RUN apt-get update && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copiar el script para crear el rol replicator
-#COPY ./scripts/init-replicator-role.sh /docker-entrypoint-initdb.d/init-replicator-role.sh
+COPY ./scripts/init-replicator-role.sh /docker-entrypoint-initdb.d/init-replicator-role.sh
 
 # Asegurarse de que el script tenga permisos de ejecución
-#RUN chmod +x /docker-entrypoint-initdb.d/init-replicator-role.sh
+RUN chmod +x /docker-entrypoint-initdb.d/init-replicator-role.sh
 
 RUN mkdir -p /var/lib/postgresql/data/node1 && \
     chown -R postgres:postgres /var/lib/postgresql/data && \
